--- a/package.json
+++ b/package.json
@@ -19,20 +19,20 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "helmet": "^7.0.0",
     "dotenv": "^16.3.1",
-    "morgan": "^1.10.0",
+    "express": "^4.21.2",
     "express-rate-limit": "^6.8.1",
+    "helmet": "^7.0.0",
     "joi": "^17.9.2",
-    "moment": "^2.29.4"
+    "moment": "^2.29.4",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
+    "@types/jest": "^29.5.3",
     "jest": "^29.6.2",
-    "supertest": "^6.3.3",
-    "@types/jest": "^29.5.3"
+    "nodemon": "^3.0.1",
+    "supertest": "^6.3.3"
   },
   "engines": {
     "node": ">=16.0.0"
