--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "dotenv": "^16.3.1",
     "express": "^4.21.2",
     "express-rate-limit": "^6.8.1",
+    "googleapis": "^128.0.0",
     "helmet": "^7.0.0",
     "joi": "^17.9.2",
     "moment": "^2.29.4",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "validator": "^13.15.15"
   },
   "devDependencies": {
     "@types/jest": "^29.5.3",
