--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,9 @@ VALID_API_KEYS=your-secret-api-key-1,your-secret-api-key-2
 # Google Service Account Configuration
 # Option 1: Use service account key file path
 GOOGLE_SERVICE_ACCOUNT_KEY_FILE=/path/to/your/service-account-key.json
+# we have connected with developers@foodiestrip.com!!! created a new service account and downloaded the json file and put it in config folder
+# and shared on google calendar with that mail..
+
 
 # Option 2: Use inline service account credentials (for deployment)
 # GOOGLE_SERVICE_ACCOUNT_CREDENTIALS={"type":"service_account","project_id":"your-project-id",...}
